add notebook for augmented csv

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "source": [
     "df = pd.read_csv('raw.csv', header=None)"
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "source": [
     "df.head()"
    ],
@@ -255,14 +255,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 31
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "source": [
     "num_features = 5\n",
     "num_labels = 3\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "source": [
     "start_index = 0\n",
     "end_index = num_features\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "source": [
     "df_list[2].head()"
    ],
@@ -489,14 +489,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 34
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "source": [
     "for i in range(len(df_list)):\n",
     "    df_list[i] = df_list[i].reset_index(drop=True)\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "source": [
     "df_main = pd.concat(df_list)"
    ],
@@ -524,8 +524,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Final data to be processed"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "source": [
     "df_main"
    ],
@@ -683,14 +690,21 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 37
     }
    ],
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Using XGBoost to classify "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "source": [
     "from xgboost import XGBClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -701,10 +715,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "source": [
-    "X = df_main.iloc[:,0:5]\n",
-    "Y = df_main.iloc[:,5:]\n",
+    "X = df_main.iloc[:,0:num_features]\n",
+    "Y = df_main.iloc[:,num_features:]\n",
     "Y.head()"
    ],
    "outputs": [
@@ -768,14 +782,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 39
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "source": [
     "seed = 7\n",
     "test_size = 0.33\n",
@@ -791,20 +805,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "source": [
     "model = XGBClassifier()\n",
-    "model.fit(X_train, y_train.ravel())"
+    "model.fit(X_train, y_train.values.ravel())"
    ],
    "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/home/nrupeshsurya/Code/DataCleaning-IMU/env/lib/python3.9/site-packages/sklearn/utils/validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  return f(*args, **kwargs)\n"
-     ]
-    },
     {
      "output_type": "execute_result",
      "data": {
@@ -813,14 +819,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 41
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "source": [
     "y_pred = model.predict(X_test)\n",
     "predictions = [round(value) for value in y_pred]"
@@ -830,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "source": [
     "accuracy = accuracy_score(y_test, predictions)\n",
     "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))\n"
@@ -844,13 +850,6 @@
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ]
