--- a/clean_augmented.ipynb
+++ b/clean_augmented.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "source": [
-    "df = pd.read_csv('augmented.csv', header=None)"
+    "df = pd.read_csv('Data/augmented.csv', header=None)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "source": [
     "df.head()"
    ],
@@ -255,14 +255,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 34
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "source": [
     "num_features = 15\n",
     "num_labels = 3\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "source": [
     "start_index = 0\n",
     "end_index = num_features\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "source": [
     "df_list[2].head()"
    ],
@@ -489,14 +489,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 37
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "source": [
     "for i in range(len(df_list)):\n",
     "    df_list[i] = df_list[i].reset_index(drop=True)\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "source": [
     "df_main = pd.concat(df_list)"
    ],
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "source": [
     "df_main"
    ],
@@ -836,7 +836,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 40
     }
    ],
    "metadata": {}
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "source": [
     "from xgboost import XGBClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "source": [
     "X = df_main.iloc[:,0:num_features]\n",
     "Y = df_main.iloc[:,num_features:]\n",
@@ -1026,14 +1026,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 42
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "source": [
     "seed = 7\n",
     "test_size = 0.33\n",
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "source": [
     "model = XGBClassifier()\n",
     "model.fit(X_train, y_train.values.ravel())"
@@ -1063,14 +1063,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 44
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "source": [
     "y_pred = model.predict(X_test)\n",
     "predictions = [round(value) for value in y_pred]"
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "source": [
     "accuracy = accuracy_score(y_test, predictions)\n",
     "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))\n"
