--- a/clean.ipynb
+++ b/clean.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 74,
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 75,
    "source": [
-    "df = pd.read_csv('raw.csv', header=None)"
+    "df = pd.read_csv('Data/raw.csv', header=None)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 76,
    "source": [
     "df.head()"
    ],
@@ -255,14 +255,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 76
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 77,
    "source": [
     "num_features = 5\n",
     "num_labels = 3\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
    "source": [
     "start_index = 0\n",
     "end_index = num_features\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 79,
    "source": [
     "df_list[2].head()"
    ],
@@ -489,14 +489,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 79
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 80,
    "source": [
     "for i in range(len(df_list)):\n",
     "    df_list[i] = df_list[i].reset_index(drop=True)\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 81,
    "source": [
     "df_main = pd.concat(df_list)"
    ],
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 82,
    "source": [
     "df_main"
    ],
@@ -690,7 +690,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 82
     }
    ],
    "metadata": {}
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 83,
    "source": [
     "from xgboost import XGBClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 84,
    "source": [
     "X = df_main.iloc[:,0:num_features]\n",
     "Y = df_main.iloc[:,num_features:]\n",
@@ -782,14 +782,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 39
+     "execution_count": 84
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 85,
    "source": [
     "seed = 7\n",
     "test_size = 0.33\n",
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 86,
    "source": [
     "model = XGBClassifier()\n",
     "model.fit(X_train, y_train.values.ravel())"
@@ -819,14 +819,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 86
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 87,
    "source": [
     "y_pred = model.predict(X_test)\n",
     "predictions = [round(value) for value in y_pred]"
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "source": [
     "accuracy = accuracy_score(y_test, predictions)\n",
     "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))\n"
