--- a/clean.ipynb
+++ b/clean.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "source": [
     "df = pd.read_csv('Data/raw.csv', header=None)"
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 91,
    "source": [
     "df.head()"
    ],
@@ -255,14 +255,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 76
+     "execution_count": 91
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 92,
    "source": [
     "num_features = 5\n",
     "num_labels = 3\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 93,
    "source": [
     "start_index = 0\n",
     "end_index = num_features\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 94,
    "source": [
     "df_list[2].head()"
    ],
@@ -489,14 +489,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 79
+     "execution_count": 94
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 95,
    "source": [
     "for i in range(len(df_list)):\n",
     "    df_list[i] = df_list[i].reset_index(drop=True)\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 96,
    "source": [
     "df_main = pd.concat(df_list)"
    ],
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 97,
    "source": [
     "df_main"
    ],
@@ -690,7 +690,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 97
     }
    ],
    "metadata": {}
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "source": [
     "from xgboost import XGBClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "source": [
     "X = df_main.iloc[:,0:num_features]\n",
     "Y = df_main.iloc[:,num_features:]\n",
@@ -782,14 +782,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 84
+     "execution_count": 99
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 100,
    "source": [
     "seed = 7\n",
     "test_size = 0.33\n",
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 101,
    "source": [
     "model = XGBClassifier()\n",
     "model.fit(X_train, y_train.values.ravel())"
@@ -819,14 +819,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 86
+     "execution_count": 101
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 102,
    "source": [
     "y_pred = model.predict(X_test)\n",
     "predictions = [round(value) for value in y_pred]"
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 103,
    "source": [
     "accuracy = accuracy_score(y_test, predictions)\n",
     "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))\n"
@@ -850,6 +850,15 @@
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "df_main.to_csv('Cleaned Data/raw_clean.csv')"
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ]
